<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PodPAmp</string>

	<!--Activities labels-->
	<string name="queue_list_title">PodPAmp Queue</string>
	<string name="feeds_list_title">Subscriptions</string>
	<string name="settings_title">PodPAmp Settings</string>

	<!--MainActivity-->
	<string name="feeds_btn_text">Feeds</string>
	<string name="refresh_btn_text">Refresh</string>
	<string name="refresh_failed">Unable to refresh feeds</string>
	<string name="episode_downloading_failed">Unable to download episode</string>
	<string name="cleanup_failed">Unable to remove read episodes</string>
	<string name="refresh_complete">Refresh complete.</string>
	<string name="clean_up_complete">Clean up complete.</string>
	<string name="episodes_deleted">episodes have been deleted.</string>

	<!--FeedsActivity-->
	<string name="add_feed_text">Subscribe</string>
	<string name="add_feeds_from_file_text">Pick a file</string>
	<string name="add_feed_dialog_title">Add a subscription</string>
	<string name="add_feed_dialog_message">Type or paste a feed url to add a subscription.</string>
	<string name="install_file_manager">Please install a File Manager.</string>
	<string name="subscriptions_parse_error">Unable to read the list of subscriptions from %s</string>
	<string name="delete_feed_dialog_title">Remove the subscription</string>
	<string name="delete_feed_dialog_message">Are you sure you want to remove the subscription?</string>
	<string name="failed_to_add_feed">Unable to add a subscription.</string>
	<string name="episodes_count_text">new episodes</string>
	<string name="one_episodes_text">new episode</string>

	<!--FeedItemDetailsActivity-->
	<string name="mark_listened_btn_text">Listened</string>
	<string name="mark_not_listened_btn_text">Not listened</string>
	<string name="download_failed">Unable to download episode</string>
	<string name="remove_download_dialog_title">Remove download</string>
	<string name="remove_download_dialog_message">Are you sure you want to remove the downloaded episode?</string>

	<!--Common-->
	<string name="cancel_btn_text">Cancel</string>
	<string name="icon_desc">Icon</string>
	<string name="star_desc">Star</string>
	<string name="no_new_episodes">No new episodes</string>
	<string name="no_connection">No network connection</string>
	<string name="waiting_download">Waiting</string>
	<string name="download_complete">Download complete.</string>

	<!--Settings-->
	<string name="pref_conn_type">Sync on Wi-Fi only</string>
	<string name="pref_conn_type_summary">Download media only if connected to a Wi-Fi network</string>
	<string name="pref_keep_unread_count_summary">How many episodes remain unread during adding a new feed</string>
	<string name="pref_keep_unread_count">New feed unread count</string>
	<string name="pref_instant_download_on_refresh">Instantly download fresh episodes</string>
	<string name="pref_instant_download_on_refresh_summary">Download new episodes during refreshing feeds</string>
	<string name="pref_episode_keep_time">Keep read episodes for</string>
	<string name="pref_episode_keep_time_summary">Read episodes published earlier than this amount of days before now will be cleaned up</string>

	<!--Main Menu-->
	<string name="mi_settings_text">Settings</string>
	<string name="mi_cleanup_text">Clean Up</string>

	<!--Feeds Menu-->
	<string name="mi_mark_all_listened_text">Mark all listened</string>
	<string name="mi_delete_feed_text">Unsubscribe</string>
	<string name="mi_refresh_feed_icon_text">Refresh icon</string>
	<string name="mi_change_feed_icon_text">Change icon</string>

	<!--Feed Item Menu-->
	<string name="mi_remove_download_text">Remove download</string>
</resources>
