<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="pref_conn_type"
						android:title="@string/pref_conn_type"
						android:summary="@string/pref_conn_type_summary"
						android:defaultValue="true" />
	<CheckBoxPreference android:key="pref_instant_download_on_refresh"
						android:title="@string/pref_instant_download_on_refresh"
						android:summary="@string/pref_instant_download_on_refresh_summary"
						android:defaultValue="true" />
	<EditTextPreference android:key="pref_keep_unread_count"
						android:title="@string/pref_keep_unread_count"
						android:summary="@string/pref_keep_unread_count_summary"
						android:defaultValue="2"
						android:inputType="number"
						android:numeric="integer"/>
</PreferenceScreen>